--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
 <br>
   <a href="Zadanie13_kod_watroba.html" target="strony">Z13-Kod</a> <br>
     <a href="Zadanie15_kod_watroba.html" target="strony">Z15-Kod</a> <br>
+         <a href="code34.html" target="strony">kod 34</a> <br>
+         <a href="code36.html" target="strony">kod 36</a> <br>
 </td>
 </tr>
 </table>
